# cert-tools

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  installer.nsi
.github/workflows/: ci.yml  release.yml
resources/: cert-tools.desktop
src/: chain.rs  cli.rs  lib.rs  main.rs
ui/: Cargo.toml  build.rs
ui/src/: main.rs
