[package]
name = "cert-tools"
description = "Application to show, check and cleanup content of PEM files"
version = "0.4.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Paul-Christian Volkmer"]

[workspace]
members = ["ui"]

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
clap = { version = "4.5", features = ["std", "help", "usage", "derive", "error-context"], default-features = false }
console = "0.16"
itertools = "0.14"

#[target.'cfg(windows)'.dependencies]
#openssl-sys = { version = "0.9", features = ["vendored"] }

[profile.release]
opt-level = "s"
codegen-units = 1
lto = "thin"
strip = true
panic = "abort"
