[package]
name = "cert-tools"
description = "Application to show, check and cleanup content of PEM files"
version = "0.4.2"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Paul-Christian Volkmer"]

[workspace]
members = ["ui"]

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
clap = { version = "4.5", features = ["std", "help", "usage", "derive", "error-context"], default-features = false }
console = "0.16"
itertools = "0.14"

#[target.'cfg(windows)'.dependencies]
#openssl-sys = { version = "0.9", features = ["vendored"] }

# Profiles

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
strip = true
panic = "abort"

# Lints

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
pedantic = { level = "warn", priority = -1 }

[lints.rust]
unused_must_use = "deny"

# Packaging

[package.metadata.deb]
copyright = "Copyright (C) 2025 the original author or authors"
extended-description = "Application to show, check and cleanup content of PEM files"
assets = [
    ["target/release/cert-tools", "usr/bin/", "755"],
    ["target/release/cert-tools-ui", "usr/bin/", "755"],
    ["resources/cert-tools.desktop", "usr/share/applications", "644"],
    ["resources/cert-tools-ui.svg", "usr/share/icons/hicolor/scalable/apps/", "644"]
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/x86_64-unknown-linux-gnu/release/cert-tools", dest = "/usr/bin/", mode = "755" },
    { source = "target/x86_64-unknown-linux-gnu/release/cert-tools-ui", dest = "/usr/bin/", mode = "755" },
    { source = "resources/cert-tools.desktop", dest = "/usr/share/applications/", mode = "644" },
    { source = "resources/cert-tools-ui.svg", dest = "/usr/share/icons/hicolor/scalable/apps/", mode = "644" }
]