[package]
name = "cert-tools-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
cert-tools = { path = "..", version = "*" }
iced = { version = "0.13", features = ["wgpu", "tiny-skia", "tokio", "web-colors", "image"], default-features = false }
rfd = "0.15"
itertools = "0.14"
image = {version = "0.25", features = ["ico"], default-features = false }

[build-dependencies]
winresource = "0.1"