[package]
name = "cert-tools-ui"
version = "0.4.1"
edition = "2021"

[dependencies]
cert-tools = { path = ".." }
iced = { version = "0.13", features = ["wgpu", "tiny-skia", "tokio", "web-colors", "image"], default-features = false }
rfd = "0.15"
itertools = "0.14"

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
strip = true
panic = "abort"