[package]
name = "cert-tools-ui"
version = "0.4.1"
edition = "2024"

[dependencies]
cert-tools = { path = ".." }
iced = { version = "0.14", features = ["wayland", "x11", "wgpu", "tiny-skia", "tokio", "web-colors", "image", "advanced"], default-features = false }
rfd = "0.16"
itertools = "0.14"

[build-dependencies]
winresource = "0.1"